# uce_applied_deep_learning

./: .gitignore  .post-commit.yaml  .pre-commit-config.yaml  README.md  pyproject.toml  rsync_exclude.txt  setup.cfg
.github/workflows/: ci.yml  lint.yml
configs/edit/: sd_14_uce.py  sd_21_uce.py
configs/generate/: sd_14_cars.py  sd_14_ori_imagenet.py  sd_21_cars.py
configs/iba/: iba_sd_in1k.py
data/prompts/: beetle_prompts.csv  birds_prompts.csv  cars_prompts.csv  iba_imagenet_prompts.csv  imagenet_prompts.csv  mario_prompts.csv
datasets/: __init__.py  builder.py  collate_fn.py  prompts_dataset.py
edit/: builder.py  io.py  uce.py
generate/: generator.py
tests/: test_config.py  test_data.py  test_uce_model.py
tools/: edit_model.py  generate_images.py  train_iba.py
uce/datasets/: __init__.py  prompts_dataset.py
uce/edit/: __init__.py  base.py  io.py  uce.py
uce/generate/: __init__.py  builder.py  generate_images.py  generator.py
uce/iba/: __init__.py  builder.py  estimator.py  iba_runner.py  info_bottleneck.py  utils.py
uce/utils/: __init__.py  logging.py  seed.py  typing.py
utils/: img_conversion.py  typing.py
