[metadata]
name = uce
version = 0.1.0
description = TODO
keywords = TODO

[options]
zip_safe = False
install_requires =
    accelerate
    alive-progress
    diffusers
    mmengine
    numpy
    opencv-python
    pandas
    Pillow
    torch
    transformers

packages = find:

dev =
    build
    codecov
    flake8
    isort
    mypy
    pytest
    pytest-cov
    pytest-xdist
    setuptools
    yapf
    docformatter

[yapf]
based_on_style = pep8
blank_line_before_nested_class_or_def = true
split_before_expression_after_opening_paren = true
split_before_first_argument = true
split_all_top_level_comma_separated_values = true
column_limit = 88

[flake8]
max-line-length = 88
ignore = E722,E203,E231,F841,W503,W504,F403,E402,F405
per-file-ignores = __init__.py: F401

[mypy]
allow_redefinition = true
ignore_missing_imports = true
no_site_packages = true
plugins = numpy.typing.mypy_plugin

[mypy-tests.*]
strict_optional = false

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
extra_standard_library = pkg_resources,setuptools,logging,os,warnings,abc,typing,collections,functools,
    datetime,copy,inspect,xml,multiprocessing,string,random,
known_first_party = uce
known_third_party = diffusers,mmengine,numpy,cv2,pandas,torch,transformers,accelerate,PIL,alive_progress
no_lines_before = STDLIB,LOCALFOLDER
default_section = THIRDPARTY
